fixes skills elements overlapping

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -7,7 +7,6 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    align-items: center;
   }
 
   &__paragraph {
