--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -136,6 +136,3 @@ body {
   line-height: 1.6;
   font-family: "Roboto", sans-serif;
 }
-
-main {
-}
