--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -21,6 +21,7 @@
   }
 
   &__info {
+    box-shadow: $shadow-medium;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -28,24 +29,9 @@
     top: 25%;
     left: 3%;
     padding: 2rem;
-
     width: 35rem;
     height: 25rem;
-    border-radius: 15px;
     background-color: #ffff;
-
-    &:before {
-      content: "";
-      width: 0px;
-      height: 0px;
-      position: absolute;
-      border-left: 15px solid white;
-      border-right: 15px solid transparent;
-      border-bottom: 15px solid white;
-      border-top: 15px solid transparent;
-      right: -16px;
-      bottom: 0px;
-    }
   }
 
   &__message {
