--- a/src/sass/_overlay.scss
+++ b/src/sass/_overlay.scss
@@ -242,7 +242,7 @@
       width: 20%;
       height: 20%;
       border: 1.5px solid;
-      transition: all 0.6s ease;
+      transition: all 0.3s ease;
       border-radius: 2px;
     }
 
