--- a/src/sass/_skills.scss
+++ b/src/sass/_skills.scss
@@ -3,13 +3,6 @@
   flex-direction: column;
   position: relative;
 
-  &__body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-  }
-
   &__img {
     width: 10rem;
     position: absolute;
@@ -32,7 +25,6 @@
     border-radius: 50%;
     background: transparent;
     z-index: -100;
-    // box-shadow: $shadow-medium;
   }
 
   &__skill {
@@ -83,10 +75,10 @@
   &__cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 40rem;
     grid-gap: 2rem;
     align-items: stretch;
     justify-content: stretch;
-    height: 45rem;
   }
 
   &__card {
@@ -115,5 +107,21 @@
 
   &__keyskills {
     font-size: 1.5rem;
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    height: 120rem;
+
+    &__cards {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 45rem 45rem;
+    }
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    &__cards {
+      grid-template-columns: 1fr;
+      grid-template-rows: 45rem 45rem 45rem;
+    }
   }
 }
